Extract separate EntityKey