@@ -118,22 +118,22 @@ public class LegacyGraphQLQueryTypeImpl
         : (
           (List<LegacyGraphQLTypes.LegacyGraphQLAlertSeverityLevelType>) args.getLegacyGraphQLSeverityLevel()
         ).stream()
-          .map(severity -> severity.name())
-          .collect(Collectors.toList());
+          .map(Enum::name)
+          .toList();
       List<String> effects = args.getLegacyGraphQLEffect() == null
         ? null
         : (
           (List<LegacyGraphQLTypes.LegacyGraphQLAlertEffectType>) args.getLegacyGraphQLEffect()
         ).stream()
-          .map(effect -> effect.name())
-          .collect(Collectors.toList());
+          .map(Enum::name)
+          .toList();
       List<String> causes = args.getLegacyGraphQLCause() == null
         ? null
         : (
           (List<LegacyGraphQLTypes.LegacyGraphQLAlertCauseType>) args.getLegacyGraphQLCause()
         ).stream()
-          .map(cause -> cause.name())
-          .collect(Collectors.toList());
+          .map(Enum::name)
+          .toList();
       return alerts
         .stream()
         .filter(alert ->
@@ -141,17 +141,10 @@ public class LegacyGraphQLQueryTypeImpl
           ((List<String>) args.getLegacyGraphQLFeeds()).contains(alert.getFeedId())
         )
         .filter(alert ->
-          args.getLegacyGraphQLSeverityLevel() == null ||
-          severities.contains(getLegacyGraphQLSeverity(alert.severity))
+          severities == null || severities.contains(getLegacyGraphQLSeverity(alert.severity))
         )
-        .filter(alert ->
-          args.getLegacyGraphQLEffect() == null ||
-          effects.contains(getLegacyGraphQLEffect(alert.effect))
-        )
-        .filter(alert ->
-          args.getLegacyGraphQLCause() == null ||
-          causes.contains(getLegacyGraphQLCause(alert.cause))
-        )
+        .filter(alert -> effects == null || effects.contains(getLegacyGraphQLEffect(alert.effect)))
+        .filter(alert -> causes == null || causes.contains(getLegacyGraphQLCause(alert.cause)))
         .filter(alert ->
           args.getLegacyGraphQLRoute() == null ||
           alert
@@ -160,7 +153,7 @@ public class LegacyGraphQLQueryTypeImpl
             .filter(entitySelector -> entitySelector instanceof EntitySelector.Route)
             .map(EntitySelector.Route.class::cast)
             .anyMatch(route ->
-              ((List<String>) args.getLegacyGraphQLRoute()).contains(route.routeId.toString())
+              ((List<String>) args.getLegacyGraphQLRoute()).contains(route.routeId().toString())
             )
         )
         .filter(alert ->
@@ -171,7 +164,7 @@ public class LegacyGraphQLQueryTypeImpl
             .filter(entitySelector -> entitySelector instanceof EntitySelector.Stop)
             .map(EntitySelector.Stop.class::cast)
             .anyMatch(stop ->
-              ((List<String>) args.getLegacyGraphQLStop()).contains(stop.stopId.toString())
+              ((List<String>) args.getLegacyGraphQLStop()).contains(stop.stopId().toString())
             )
         )
         .collect(Collectors.toList());
